--- a/evidences.Rmd
+++ b/evidences.Rmd
@@ -1,13 +1,28 @@
 
 ```{r, include=FALSE}
 #Load necessary libraries
+library(emojifont)
 library(knitr)
 ```
 
 # Evidences
 
+An Evidence provides information on type of scientific evidence.
 
-## Introduction
+## Adding an Evidence
+
+
+
+
+
+## DataSources
+
+The Evidence and Conclusion Ontology (ECO) is the DataSource for Evidences. You can find information about ECO [here](https://www.evidenceontology.org/ ).
+
+## `r emoji("globe_with_meridians")` Related Links and Resources
+To learn more about Annotation, Citations, and Evidences in GPML, see [GPML documentation](https://pathvisio.org/documentation/Whats-New-GPML2021.html#streamlined-annotations-citations-and-evidences)
+
+
 
 
 
