--- a/citations.Rmd
+++ b/citations.Rmd
@@ -7,9 +7,19 @@ library(knitr)
 
 # Citations
 
-A Citation is a reference to a source of information (book, paper, or author, especially in a scholarly work).
+A Citation is a reference to a source of information (book, paper, or author, especially in a scholarly work), which you can add to a Pathway Element to provide additional information. 
 
-## DataSources 
+Required information for a Citation are:
+
+1. Identifier - the identifier for a database for this Annotation.  
+2. Database - the database for this Annotation. 
+
+AND/OR 
+
+3. Url link - the url link for this Citation
+
+
+## Databases/DataSources  
 
 - DOI 
 - ISBN
@@ -19,12 +29,43 @@ A Citation is a reference to a source of information (book, paper, or author, es
 
 ## Adding a Citation
 
-1. Right click Pathway Element
-2. Double click on Pathway Element 
+### From Properties Dialog
 
+You can navigate to the window to add a Citation by: 
 
-3. 
+1. Double clicking on the Pathway Element.
+2. Selecting the Citations Tab.
+3. Clicking on "New citation" button.
+4. Enter required Citation information (Identifier and Database AND/OR Url link)
+5. You can Query/Validate Identifier and Database to check if the citation exists.
 
+![](images/gifs/add_citation_1.gif){width=100%}
+
+### From Right-Click > Add Reference > Add Citation
+
+You can navigate to the window to add an Citation by: 
+
+1. Right-click on the Pathway Element > Add Reference > Add Citation
+2. Enter required Citation information (Identifier and Database AND/OR Url link)
+3. You can Query/Validate Identifier and Database to check if the citation exists.
+
+![](images/gifs/add_citation_2.gif){width=100%}
+## Editing a Citation
+
+You can navigate to the Citations Tab Window in two ways: 
+
+1. Double clicking on the Pathway Element and selecting the Citations tab.
+2. Right-click on the Pathway Element > Edit Reference > Edit Citations
+
+To Edit a Citation, mouse over that Citation and click on the Blue Edit button. Enter information as normal. 
+
+![](images/gifs/edit_citation.gif){width=100%}
+
+## Deleting a Citation
+
+To Delete a Citation, mouse over that Citation and click on the Red Delete button.
+
+![](images/gifs/delete_citation.gif){width=100%}
 
 ## Nested Annotations (Advanced)
 
@@ -34,28 +75,28 @@ To add a nested Annotation to the Citation of a Pathway Element, you must do the
 
 1. Add a nested AnnotationRef with elementRef pointing to the elementId of the Annotation. 
 
+```
     <CitationRef elementRef="c0001">
         <AnnotationRef elementRef="a0002" />
-    </CitationRef>
-
+    </CitationRef>`
+```
 
 2. The Annotation and all its information should be at the end of the GPML, this may also need to be added manually if this Annotation is not already referenced elsewhere in your pathway.
-    
-    <Annotations>
-        </Annotation>
-            <Annotation elementId="a0002" name="thyroid cancer" type="Disease">
-            <Xref identifier="1781" dataSource="DOID"/>
-    	<Url link="https://identifiers.org/DOID:1781"/>
-        </Annotation>
-    </Annotations>
-    <Citations>
-        <Citation elementId="c0001">
-            <Xref identifier="7730304" dataSource="pubmed"/>
-            <Url link="https://identifiers.org/pubmed:7730304"/>
-        </Citation>
-        ...
-    </Citations>
 
+```
+<Annotations>
+    <Annotation elementId="a0002" name="thyroid cancer" type="Disease">
+        <Xref identifier="1781" dataSource="DOID"/>
+    	<Url link="https://identifiers.org/DOID:1781"/>
+    </Annotation>
+</Annotations>
+<Citations>
+    <Citation elementId="c0001">
+        <Xref identifier="7730304" dataSource="pubmed"/>
+        <Url link="https://identifiers.org/pubmed:7730304"/>
+    </Citation>
+</Citations>
+```
 
 ## `r emoji("globe_with_meridians")` Related Links and Resources
 To learn more about Annotation, Citations, and Evidences in GPML, see [GPML documentation](https://pathvisio.org/documentation/Whats-New-GPML2021.html#streamlined-annotations-citations-and-evidences)
