--- a/pathway-meta-info.Rmd
+++ b/pathway-meta-info.Rmd
@@ -8,17 +8,18 @@ library(knitr)
 
 ## Required pathway information
 
-* Title
-* Organism
+* Title - concise descriptive name for a pathway model
+* Organism - the main organism
 
 ## Optional pathway information
 
-* Description
-* Source
-* Version
-* License
-* Author
+* Description - description of the pathway (e.g. major steps) 
+* *Source* - WikiPathways
+* *Version*  
+* *License* 
+* *Author*
 * Comment
 * Database:Identifier
 
+*Italicized* fields are not generally edited in PathVisio
 
