--- a/why-add-info.Rmd
+++ b/why-add-info.Rmd
@@ -13,6 +13,7 @@ As mentioned before, the [Ten simple rules for creating reusable pathway models 
 
 
 In general machine readable information about the pathway or its pathway elements can... 
+
 * Improve the findability and organization of the pathway models.
 * Improve the readability and reusability of the pathway. 
 * Be used to automatically filter pathway content by the presence and type of supporting evidence. 
@@ -22,19 +23,19 @@ In general machine readable information about the pathway or its pathway element
 To the pathway, we can add: 
 
 * Comments - descriptions or arbitrary notes for an object
-* [Annotations](annotations.Rmd)
-* [Citations](citations.Rmd)
-* [Evidences](evidences.Rmd)
-* [Properties](properties.Rmd)/[Pathway meta-information](pathway-meta-info.Rmd) - e.g. title, authors, etc. 
+* [Annotations](annotations.md)
+* [Citations](citations.md)
+* [Evidences](evidences.md)
+* [Properties](properties.md)/[Pathway meta-information](pathway-meta-info.Rmd) - e.g. title, authors, etc. 
 
 ## Pathway element information 
 To Pathway Elements we can add: 
 
 * Comments - descriptions or arbitrary notes for an object
-* [Annotations](annotations.Rmd)
-* [Citations](citations.Rmd)
-* [Evidences](evidences.Rmd)
-* [Properties](properties.Rmd)
+* [Annotations](annotations.md)
+* [Citations](citations.md)
+* [Evidences](evidences.md)
+* [Properties](properties.md)
 
 
 
