--- a/index.Rmd
+++ b/index.Rmd
@@ -4,12 +4,8 @@ author: "Finterly Hu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: bookdown::bs4_book
-documentclass: book
-bibliography: [book.bib, packages.bib]
-biblio-style: apalike
-link-citations: yes
 cover-image: images/logos/pathvisio-logo-transparent.png
-github-repo: Finterly/pathvisio-book
+github-repo: PathVisio/pathvisio-book-generation
 description: "Guide book for PathVisio."
 always_allow_html: yes
 ---
