--- a/saving-a-pathway-model.Rmd
+++ b/saving-a-pathway-model.Rmd
@@ -5,7 +5,7 @@ library(emojifont)
 library(knitr)
 ```
 
-# Saving your pathway model
+# Saving a pathway model
 
 ## Graphical Pathway Markup Language (GPML)
 
