--- a/properties.Rmd
+++ b/properties.Rmd
@@ -78,7 +78,7 @@ To add Identifier and Database information:
 ### Adding Identifier and Database using Search (DataNode)
 To add Identifier and Database information by Search: 
 
-1. Load Identifier Mapping Database, if not done so already, instruction [here](load-identifier-mapping-database.html)
+1. [Load Identifier Mapping Database](load-identifier-mapping-database.html), if not done so already
 2. Navigate to the Properties Tab of the Pathway Element.
 4. Enter an Identifier or Name and click Search.
 5. Select desired item from search Results, this will automatically populate the fields. 
