--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,10 @@ always_allow_html: yes
 install.packages("bookdown")
 install.packages("emojifont")
 install.packages('knitr')
+remotes::install_github("rstudio/bslib")
+install.packages("downlit")
+install.packages("xml2")
+remotes::install_github("rstudio/bookdown")
 # or the development version
 # devtools::install_github("rstudio/bookdown")
 ```
