--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ library(knitr)
 ```
 
 # Welcome {-} 
-```{r fig.align="center", echo=FALSE, fig.cap = "Example TCA cycle pathway ([WP78](https://www.wikipathways.org/index.php/Pathway:WP78)) drawn using PathVisio and hosted on WikiPathways"}
+```{r fig.align="center",  out.width="80%", echo=FALSE, fig.cap = "Example TCA cycle pathway ([WP78](https://www.wikipathways.org/index.php/Pathway:WP78)) drawn using PathVisio and hosted on WikiPathways"}
 #TCA Cycle Pathway
 knitr::include_graphics("images/pathways/TCA-cycle.png")
 ```
