--- a/sharing-a-pathway-model.Rmd
+++ b/sharing-a-pathway-model.Rmd
@@ -10,14 +10,14 @@ library(knitr)
 Share your pathway models on WikiPathways!
 
 ### Notice
-We are currently moving to a new WikiPathways site
+We have recently moved to a new WikiPathways site
 
-- new: [https://new.wikipathways.org](https://new.wikipathways.org)
-- current: [https://www.wikipathways.org](https://www.wikipathways.org/index.php/WikiPathways). 
+- new: [https://wikipathways.org](https://www.wikipathways.org)
+- old: [https://classic.wikipathways.org](https://classic.wikipathways.org). 
 
 ```{r, include-url, out.width='100%', dev='png', cache=TRUE, screenshot.opts=list(vwidth=992), echo=FALSE}
 # example pathways on wikipathways 
-knitr::include_url("https://new.wikipathways.org")
+knitr::include_url("https://wikipathways.org")
 ```
 
 
