--- a/drawing-a-pathway-model.Rmd
+++ b/drawing-a-pathway-model.Rmd
@@ -9,7 +9,7 @@ library(knitr)
 
 ## WikiPathways Academy 
 
-Follow the [WikiPathways Academy](https://academy.wikipathways.org/path.html) to learn how to draw a pathway model!
+Follow the [WikiPathways Academy](https://wikipathways.org/academy/path.html) to learn how to draw a pathway model!
 
 ```{r, include-url, out.width='100%', dev='png', cache=TRUE, screenshot.opts=list(vwidth=992), echo=FALSE}
 # example pathways on wikipathways 
